// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuickActions.vue methods should close dropdown 1`] = `
<div class="quick-actions"><a href="javascript:void(0)" class="quick-actions-select"><img svg-inline="" src="new-dashboard/assets/icons/common/options.svg"></a>
  <!---->
</div>
`;

exports[`QuickActions.vue methods should close dropdown 2`] = `
<div class="quick-actions is-open"><a href="javascript:void(0)" class="quick-actions-select is-active"><img svg-inline="" src="new-dashboard/assets/icons/common/options.svg"></a>
  <div class="quick-actions-dropdown is-active">
    <h6 class="quick-actions-title text is-semibold is-xsmall is-txtSoftGrey">QuickActions.title</h6>
    <ul>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtPrimary">Edit info</a></li>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtPrimary">Change Privacy</a></li>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtPrimary">Manage Tags</a></li>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtPrimary">Duplicate map</a></li>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtPrimary">Lock Map</a></li>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtAlert">Delete Map</a></li>
    </ul>
  </div>
</div>
`;

exports[`QuickActions.vue methods should close dropdown 3`] = `
<div class="quick-actions"><a href="javascript:void(0)" class="quick-actions-select"><img svg-inline="" src="new-dashboard/assets/icons/common/options.svg"></a>
  <!---->
</div>
`;

exports[`QuickActions.vue methods should open dropdown and then close it again 1`] = `
<div class="quick-actions is-open"><a href="javascript:void(0)" class="quick-actions-select is-active"><img svg-inline="" src="new-dashboard/assets/icons/common/options.svg"></a>
  <div class="quick-actions-dropdown is-active">
    <h6 class="quick-actions-title text is-semibold is-xsmall is-txtSoftGrey">QuickActions.title</h6>
    <ul>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtPrimary">Edit info</a></li>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtPrimary">Change Privacy</a></li>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtPrimary">Manage Tags</a></li>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtPrimary">Duplicate map</a></li>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtPrimary">Lock Map</a></li>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtAlert">Delete Map</a></li>
    </ul>
  </div>
</div>
`;

exports[`QuickActions.vue methods should open dropdown and then close it again 2`] = `
<div class="quick-actions"><a href="javascript:void(0)" class="quick-actions-select"><img svg-inline="" src="new-dashboard/assets/icons/common/options.svg"></a>
  <!---->
</div>
`;

exports[`QuickActions.vue should not render options with shouldBeHidden 1`] = `
<div class="quick-actions is-open"><a href="javascript:void(0)" class="quick-actions-select is-active"><img svg-inline="" src="new-dashboard/assets/icons/common/options.svg"></a>
  <div class="quick-actions-dropdown is-active">
    <h6 class="quick-actions-title text is-semibold is-xsmall is-txtSoftGrey">QuickActions.title</h6>
    <ul>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtPrimary">Edit info</a></li>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtPrimary">Change Privacy</a></li>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtPrimary">Manage Tags</a></li>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtPrimary">Duplicate map</a></li>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtPrimary">Lock Map</a></li>
      <li class="action__item">
        <!----> <a href="#" class="action__text text is-caption is-txtAlert">Delete Map</a></li>
      <!---->
    </ul>
  </div>
</div>
`;

exports[`QuickActions.vue should render correct contents 1`] = `
<div class="quick-actions"><a href="javascript:void(0)" class="quick-actions-select"><img svg-inline="" src="new-dashboard/assets/icons/common/options.svg"></a>
  <!---->
</div>
`;
